@@ -20,6 +20,7 @@
 
 #include <glib/gi18n.h>
 #include <gdk/gdkkeysyms.h>
+#include <stdio.h>
 
 #include "mainframe.h"
 
